2010-03-29  Tobias Burnus  <burnus@net-b.de>

PR fortran/43551
        * io/unix.c (buf_write): Set physical_offset after lseek.

2010-03-29  Tobias Burnus  <burnus@net-b.de>

        PR fortran/43551
        * gfortran.dg/direct_io_12.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157792 138bc75d-0d04-0410-961f-82ee72b054a4